[package]
name = "risc-zero-verifier"
version = "0.1.4"
edition = "2021"
description = "Verifier for RISC Zero receipts. See also risc-zero-verifier-react for a UI component."
repository = "https://github.com/eqtylab/risc-zero-verifier"
homepage = "https://github.com/eqtylab/risc-zero-verifier"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.2"
log = "0.4.21"
risc0-zkvm = { version = "0.20.1", default-features = false }
serde = "1.0.197"
serde_json = "1.0.114"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
hex = "0.4.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
]

[lib]
crate-type = ["cdylib"]
