[package]
name = "password-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
hex = "0.4"
password-checker-core = { git = "https://github.com/risc0/risc0", tag = "v0.20.1" }
password-checker-methods = { git = "https://github.com/risc0/risc0", tag = "v0.20.1" }
rand = "0.8"
risc0-zkvm = "0.20.1"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
