[package]
name = "password-checker-journal-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
risc0-zkvm = { version = "0.20.1", default-features = false }
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"
